--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,4 +7,4 @@ jobs:
     runs-on: self-hosted 
     steps:
       - run: echo 'Hello cloud gurus'
-      - run echo $HOSTNAME
+      - run: echo $HOSTNAME
